--- a/Scribe-Speach-Recognition/Base.lproj/Main.storyboard
+++ b/Scribe-Speach-Recognition/Base.lproj/Main.storyboard
@@ -46,6 +46,14 @@
                                     <constraint firstAttribute="height" constant="60" id="eWT-3e-90p"/>
                                     <constraint firstAttribute="width" constant="60" id="fuF-pD-3Sv"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="playButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Auz-qp-Rc5"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLAY &amp; TRANSCRIBE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o1n-O1-ijq">
                                 <rect key="frame" x="104.5" y="635.5" width="165" height="23.5"/>
@@ -53,22 +61,31 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ms5-Fg-mjs">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Tap the button below to transcribe the audio embedded in this app." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ms5-Fg-mjs">
                                 <rect key="frame" x="16" y="75" width="343" height="472.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="9C9-WY-VmY">
+                                <rect key="frame" x="157.5" y="567.5" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="pDo-QR-Eve"/>
+                                    <constraint firstAttribute="height" constant="60" id="vug-yb-7ap"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="PSQ-KB-eGC" secondAttribute="trailing" id="3eH-Da-vTJ"/>
                             <constraint firstItem="Ms5-Fg-mjs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="A8F-8x-jCf"/>
+                            <constraint firstItem="9C9-WY-VmY" firstAttribute="centerY" secondItem="Hs3-rD-ZDh" secondAttribute="centerY" id="BPh-oM-bTJ"/>
                             <constraint firstItem="o1n-O1-ijq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DNh-zX-L5o"/>
                             <constraint firstItem="Ms5-Fg-mjs" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Hfj-km-pHH"/>
                             <constraint firstItem="PSQ-KB-eGC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="IqQ-aK-606"/>
                             <constraint firstItem="PSQ-KB-eGC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ti9-ew-kb6"/>
+                            <constraint firstItem="9C9-WY-VmY" firstAttribute="centerX" secondItem="Hs3-rD-ZDh" secondAttribute="centerX" id="V8f-9h-wKL"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="o1n-O1-ijq" secondAttribute="bottom" constant="8" id="YAU-EV-Ek3"/>
                             <constraint firstItem="Ms5-Fg-mjs" firstAttribute="top" secondItem="PSQ-KB-eGC" secondAttribute="bottom" constant="20" id="YER-BA-e08"/>
                             <constraint firstItem="Hs3-rD-ZDh" firstAttribute="top" secondItem="Ms5-Fg-mjs" secondAttribute="bottom" constant="20" id="rgC-Lq-RkC"/>
@@ -76,6 +93,10 @@
                             <constraint firstItem="o1n-O1-ijq" firstAttribute="top" secondItem="Hs3-rD-ZDh" secondAttribute="bottom" constant="8" id="yQQ-Ne-FqW"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activitySpinner" destination="9C9-WY-VmY" id="IPs-px-HSQ"/>
+                        <outlet property="speechTextView" destination="Ms5-Fg-mjs" id="khf-QW-tw1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
